--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
     <script src="main.js"></script>
 </head>
 <body>
-    <h1>Учим GIT</h1>
-    <p>Новоое изменение файла html</p>
-    <p>fsdfsdafgdgdfgdfavdf</p>
+   <p>Lfasdkfkwgpowkaprogpowrapgo oapfwepofpo wpoa f e</p>
 </body>
 </html>
